<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:shortcutShortLabel="@string/shortcut_search_short"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.droidnova.notificationhistory"
            android:targetClass="com.droidnova.notificationhistory.MainActivity">
            <extra
                android:name="shortcut"
                android:value="search" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="history"
        android:enabled="true"
        android:icon="@drawable/ic_history"
        android:shortcutShortLabel="@string/shortcut_history_short"
        android:shortcutLongLabel="@string/shortcut_history_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.droidnova.notificationhistory"
            android:targetClass="com.droidnova.notificationhistory.MainActivity">
            <extra
                android:name="shortcut"
                android:value="history" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="insights"
        android:enabled="true"
        android:icon="@drawable/ic_insights"
        android:shortcutShortLabel="@string/shortcut_insights_short"
        android:shortcutLongLabel="@string/shortcut_insights_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.droidnova.notificationhistory"
            android:targetClass="com.droidnova.notificationhistory.MainActivity">
            <extra
                android:name="shortcut"
                android:value="insights" />
        </intent>
    </shortcut>
</shortcuts>
